# bitfunctor-theory

./: LICENSE  README.md  bitfunctor-theory.cabal  stack.yaml
