name:                bitfunctor-theory
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            http://bitfunctor.net,
                     https://github.com/BitFunctor/bitfunctor-theory
bug-reports:         https://github.com/BitFunctor/bitfunctor-theory/issues
license:             MIT
license-file:        LICENSE
author:              andruiman <andruiman@gmail.com>,
                     Sergey Kazenyuk <kazenyuk@gmail.com>
maintainer:          andruiman <andruiman@gmail.com>,
                     Sergey Kazenyuk <kazenyuk@gmail.com>
copyright:           (c) 2015-2017 BitFunctor Project
category:            Finance, Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Network.BitFunctor.Theory.Complexity,
                       Network.BitFunctor.Theory.Types,
                       Network.BitFunctor.Theory.Utils, 
                       Network.BitFunctor.Theory.Extraction,
                       Network.BitFunctor.Theory.RESTServer,
                       Network.BitFunctor.Theory.Coq.Types,
                       Network.BitFunctor.Theory.Coq.TheoryAcid,
                       Network.BitFunctor.Theory.Coq.Extraction.Constants,
                       Network.BitFunctor.Theory.Coq.Extraction.GlobFileParser,
                       Network.BitFunctor.Theory.Coq.Extraction.FileExtraction
  other-modules:
  build-depends:       base,
                       bitfunctor,
                       bytestring,
                       base16-bytestring,
                       aeson,
                       containers,
                       text,
                       time,
                       memory,
                       binary,
                       directory,
                       MissingH,
                       parsec,
                       parsec-numbers,
                       process,
                       split,
                       utf8-string,                       
                       byteable,
                       lens,
                       safecopy,
                       acid-state,
                       mtl,
                       cereal,
                       scotty,
                       http-types,
                       blaze-html,
                       shakespeare,
                       hamlet,
                       transformers
  hs-source-dirs:      src
  default-language:    Haskell2010

executable coqxtractor
  main-is:             coqxtractor.hs
  build-depends:       base
                       , argparser
                       , containers
                       , text
                       , split
                       , time
                       , binary
                       , bytestring
                       , zlib
                       , aeson
                       , http-types
                       , http-client
                       , http-client-tls
                       , conduit
                       , conduit-extra
                       , http-conduit 
                       , bitfunctor  
                       , bitfunctor-theory
  hs-source-dirs:      test/src
  default-language:    Haskell2010

executable theoryd
  main-is:             theoryd.hs
  build-depends:       base
                       , argparser
                       , acid-state
                       , mtl
                       , safecopy
                       , containers
                       , binary                       
                       , text
                       , time                       
                       , bitfunctor-theory
  hs-source-dirs:      src/Network/BitFunctor/Theory
  default-language:    Haskell2010
